[tool.poetry]
name = "minimal-pylenium-dash-example"
version = "0.1.0"
description = ""
authors = ["Raphael Nestler <raphael.nestler@renuo.ch>"]

[tool.poetry.dependencies]
python = "^3.10"
pyleniumio = "^1.15.3"
dash = "2.3.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-reportportal = "~5.0.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
